major front end revision

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -72,3 +72,34 @@
   text-decoration: none;
   color: inherit;
 }
+
+@media screen and (max-width: 700px) {
+  .sidebar_item_1 {
+    grid-area: item1;
+  }
+  .sidebar_item_2 {
+    grid-area: item2;
+  }
+  .sidebar_item_3 {
+    grid-area: item3;
+  }
+
+  .sidebar.home {
+    display: grid;
+    grid-template-areas:
+      "item1 item2"
+      "item1 item3";
+    align-items: flex-start;
+    padding-bottom: 1rem;
+    border-radius: 0;
+    border-bottom: 1px solid var(--custom-grey-1);
+    grid-row: 1fr 1fr;
+    column-gap: 5%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar_item_1 p {
+    text-align: center;
+  }
+}
