--- a/src/components/SinglePost/SinglePost.css
+++ b/src/components/SinglePost/SinglePost.css
@@ -3,7 +3,7 @@
 }
 
 .single_post_wrapper {
-  padding: 1.5rem;
+  padding: 2rem 1.5rem;
   padding-right: 0;
   display: flex;
   flex-direction: column;
@@ -84,6 +84,8 @@
   outline: none;
   border: none;
   border-bottom: 1px solid rgb(110, 110, 110);
+  min-height: 10rem;
+  padding: 0.5rem;
 }
 
 .link_single_post {
@@ -114,8 +116,9 @@
   font-family: "Oswald", sans-serif;
   color: rgb(255, 113, 61);
   line-height: 1.25rem;
-  margin-top: 1rem;
-  margin-right: 0.75rem;
+  margin: 1rem 0.5rem;
+  /* margin-top: 1rem;
+  margin-right: 0.75rem; */
   font-size: 1rem;
 }
 
@@ -139,4 +142,32 @@
 .exit_edit_mode_button > i {
   font-size: 1.5rem;
   color: #666;
+}
+
+@media screen and (max-width: 700px) {
+  .single_post_wrapper {
+    padding: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .single_post_title {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 1rem;
+    font-size: 2rem;
+    font-family: "Oswald", sans-serif;
+  }
+  .single_post_categories {
+    display: flex;
+    flex-wrap: wrap;
+    /* align-items: center; */
+    /* justify-content: space-around; */
+  }
+  .single_post_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
