--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
+  background-color: #222c;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,12 +23,12 @@
 }
 
 .header_titles h3 {
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: white;
 }
 
 .header_titles h2 {
-  font-size: 4rem;
+  font-size: 3.25rem;
   color: white;
 }
 
@@ -37,11 +41,11 @@
 
 @media screen and (max-width: 750px) {
   .header_titles h3 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .header_titles h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     white-space: nowrap;
   }
   .header_image {
@@ -51,11 +55,11 @@
 
 @media screen and (max-width: 400px) {
   .header_titles h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .header_titles h2 {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
   .header_image {
     height: 10rem;
