--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,6 +17,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Kaisei HarunoUmi", serif;
+  /* font-family: "Lora", serif; */
+  /* font-family: "Montserrat", sans-serif; */
+  /* font-family: "Oswald", sans-serif; */
+  /* font-family: "Source Sans Pro", sans-serif; */
 }
 
 .navbar_logo {
