--- a/src/components/SinglePost/SinglePost.css
+++ b/src/components/SinglePost/SinglePost.css
@@ -197,7 +197,8 @@
     justify-content: space-between;
   }
 
-  .single_post_title {
+  .single_post_title,
+  .single_post_title_input {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -205,10 +206,15 @@
 }
 
 @media screen and (max-width: 450px) {
-  .single_post_title {
+  .single_post_title,
+  .single_post_title_input {
     margin: 1rem;
     font-size: 2rem;
     font-family: "Oswald", sans-serif;
+  }
+
+  .single_post_title_input {
+    width: 90%;
   }
   .single_post_categories {
     display: flex;
